# perf-examples

./: CMakeLists.txt  README.md
ex1/: fast_allocator.hpp  gen.cpp  main.cpp  timer.hpp
ex2/: main.cpp
ex3/: main.cpp
ex4/: main.cpp  measurer.hpp  timer.hpp
scripts/: example1.sh  example2.sh  example3.sh  example4.sh  flamegraph.sh
